--- a/metadata.yaml
+++ b/metadata.yaml
@@ -41,6 +41,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'France -- Court and courtiers'
 - !lcc 'DC'
+- GITenberg
 title: 'Mémoires de madame de Rémusat (3/3)
 
   publiées par son petit-fils, Paul de Rémusat'
